--- a/mi_primera_red_neuronal.ipynb
+++ b/mi_primera_red_neuronal.ipynb
@@ -19,12 +19,12 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "90383f57-aef9-4cf3-caf4-15e0d83a0b92"
+        "outputId": "632356ed-16bf-4f6e-c82e-d7cdf89bba45"
       },
       "source": [
         "! cat /etc/os-release"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -62,7 +62,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "6abcfb57-2cfc-4db5-ca75-c8bb15e95f61"
+        "outputId": "98ffb605-3a20-44d2-8d6a-55f7a280f379"
       },
       "source": [
         "import tensorflow as tf\n",
@@ -81,7 +81,7 @@
         "\n",
         "_ = model.fit(x_train, y_train, epochs=10, verbose=0)\n"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -147,7 +147,7 @@
         "_, (x_test, _ )= tf.keras.datasets.mnist.load_data()\n",
         "x_test_ = x_test.reshape(10000, 784).astype('float32')/255"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -158,7 +158,7 @@
       "source": [
         "image = 7"
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -169,13 +169,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 265
         },
-        "outputId": "8eb1114b-63d2-4d84-8c77-ef906c1f80f7"
+        "outputId": "e8303b53-5070-4850-ba68-bbbe51bda2ff"
       },
       "source": [
         "import matplotlib.pyplot as plt\n",
         "_ = plt.imshow(x_test[image], cmap=plt.cm.binary)"
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "display_data",
@@ -195,11 +195,64 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "6H7cRL3mGdFW",
+        "outputId": "938217bb-8704-4d7c-a706-e5686bdbf607",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "import numpy\n",
+        "from numpy import linalg\n",
+        "numpy.set_printoptions(precision=2, suppress=True, linewidth=120)\n",
+        "print(numpy.matrix(x_test[image]))"
+      ],
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[[  0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0]\n",
+            " [  0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0]\n",
+            " [  0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0]\n",
+            " [  0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0]\n",
+            " [  0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0]\n",
+            " [  0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0]\n",
+            " [  0   0   0   0   0   0   0   0   0   0   0  14 149 193   5   0   0   0   0   0   0   0   0   0   0   0   0   0]\n",
+            " [  0   0   0   0   0   0   0   0   0   0  91 224 253 253  19   0   0   0   0   0   0   0   0   0   0   0   0   0]\n",
+            " [  0   0   0   0   0   0   0   0   0  28 235 254 253 253 166  18   0   0   0   0   0   0   0   0   0   0   0   0]\n",
+            " [  0   0   0   0   0   0   0   0   0 144 253 254 253 253 253 238 115   6   0   0   0   0   0   0   0   0   0   0]\n",
+            " [  0   0   0   0   0   0   0   0  31 241 253 208 185 253 253 253 231  24   0   0   0   0   0   0   0   0   0   0]\n",
+            " [  0   0   0   0   0   0   0   0  79 254 193   0   8  98 219 254 255 201  18   0   0   0   0   0   0   0   0   0]\n",
+            " [  0   0   0   0   0   0   0   0  86 253  80   0   0   0 182 253 254 191  12   0   0   0   0   0   0   0   0   0]\n",
+            " [  0   0   0   0   0   0   0   0 175 253 155   0   0   0 234 253 254 135   0   0   0   0   0   0   0   0   0   0]\n",
+            " [  0   0   0   0   0   0   0   0  86 253 208  40  85 166 251 237 254 236  42   0   0   0   0   0   0   0   0   0]\n",
+            " [  0   0   0   0   0   0   0   0  18 238 253 254 253 253 185  36 216 253 152   0   0   0   0   0   0   0   0   0]\n",
+            " [  0   0   0   0   0   0   0   0   0  68 240 255 254 145   8   0 134 254 223  35   0   0   0   0   0   0   0   0]\n",
+            " [  0   0   0   0   0   0   0   0   0   0  68 158 142  12   0   0   9 175 253 161   0   0   0   0   0   0   0   0]\n",
+            " [  0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0  88 253 226  18   0   0   0   0   0   0   0]\n",
+            " [  0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   2 166 253 126   0   0   0   0   0   0   0]\n",
+            " [  0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0  48 245 253  38   0   0   0   0   0   0]\n",
+            " [  0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0 115 254 172   9   0   0   0   0   0]\n",
+            " [  0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0  21 218 254  46   0   0   0   0   0]\n",
+            " [  0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0  30 254 165   0   0   0   0   0]\n",
+            " [  0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0 186 244  42   0   0   0   0]\n",
+            " [  0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0  14 223  78   0   0   0   0]\n",
+            " [  0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0]\n",
+            " [  0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0]]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "1NeDiON0rbm9",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "9e3b326a-a829-48ae-b92c-58594ec85b7a"
+        "outputId": "b20474a2-ac3a-4d7a-e5fc-f1b9967319ea"
       },
       "source": [
         "import numpy as np\n",
@@ -207,7 +260,7 @@
         "prediction = model.predict(x_test_)\n",
         "print(\"Predicción del modelo: \", np.argmax(prediction[image]) )"
       ],
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
